@@ -1,9 +1,8 @@
-package earth2b2t.i18n;
+package earth2b2t.i18n.provider;
 
 import com.google.gson.Gson;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -12,12 +11,20 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+/**
+ * Loads/saves user's language data in a directory.
+ */
 public class FileLanguageProvider implements LanguageProvider {
 
     private static final int MAX_SIZE = 10;
     private final Path baseDir;
     private final Gson gson;
 
+    /**
+     * Creates an instance.
+     *
+     * @param baseDir directory which player language files are saved to
+     */
     public FileLanguageProvider(Path baseDir) {
         this.baseDir = baseDir;
         this.gson = new Gson();
@@ -30,10 +37,9 @@ public class FileLanguageProvider implements LanguageProvider {
         list = list.subList(0, Math.min(list.size(), MAX_SIZE));
         list = list.stream().distinct().collect(Collectors.toList());
 
-        String contents = gson.toJson(new LocaleData(player, list));
         try {
             Files.createDirectories(baseDir);
-            Files.write(baseDir.resolve(player + ".json"), contents.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(baseDir.resolve(player + ".json"), gson.toJson(new LanguageData(player, list)));
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -44,7 +50,7 @@ public class FileLanguageProvider implements LanguageProvider {
         Path path = baseDir.resolve(player + ".json");
         if (Files.exists(path)) {
             try {
-                return gson.fromJson(new String(Files.readAllBytes(path), StandardCharsets.UTF_8), LocaleData.class).getData();
+                return gson.fromJson(Files.readString(path), LanguageData.class).getData();
             } catch (IOException e) {
                 e.printStackTrace();
             }
@@ -52,16 +58,17 @@ public class FileLanguageProvider implements LanguageProvider {
         return Collections.emptyList();
     }
 
-    private static class LocaleData {
-        private UUID uuid;
-        private List<String> data;
+    @Override
+    public void close() {
+    }
 
-        public LocaleData(UUID uuid, List<String> data) {
+    private static class LanguageData {
+        private final UUID uuid;
+        private final List<String> data;
+
+        public LanguageData(UUID uuid, List<String> data) {
             this.uuid = uuid;
             this.data = data;
-        }
-
-        public LocaleData() {
         }
 
         public UUID getUUID() {
